# robot-reefscape

./: .gitignore  .pre-commit-config.yaml  layout.json  main.py  pyproject.toml  requirements.txt  robot.py  robotcontainer.py  simgui-window.json  simgui.json  telemetry.py
.github/workflows/: build.yml
.wpilib/: wpilib_preferences.json
deploy/choreo/: New Path.traj  robot.chor
deploy/pathplanner/: settings.json
subsystems/: Elevator.py  command_swerve_drivetrain.py
tests/: pyfrc_test.py
typings/pathplannerlib/: auto.pyi  commands.pyi  config.pyi  controller.pyi  events.pyi  logging.pyi  path.pyi  pathfinders.pyi  pathfinding.pyi  telemetry.pyi  trajectory.pyi
typings/pathplannerlib/util/: __init__.pyi
